Fix quotee alignment and remove notes

--- a/styles.css
+++ b/styles.css
@@ -125,6 +125,7 @@ button,
 .quotee-text {
     margin-top: 0;
     margin-bottom: 0;
+    margin-right: 10rem;
  }
 
  .action-title{
